# djipayload-rs

./: .gitignore  Cargo.toml  README.md  build.rs  psdk  wrapper.h
clib/: hal_network.c  hal_network.h  hal_uart.c  hal_uart.h  osal.c  osal.h  osal_fs.c  osal_fs.h  osal_socket.c  osal_socket.h
examples/: run_local_log.rs
src/: hal.rs  lib.rs  osal.rs
