[package]
name = "djipayload-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
chrono = "*"
glob = "*"

[build-dependencies]
bindgen = "*"
build-target = "*"
glob = "*"
cc = "*"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "run_local_log"
path = "examples/run_local_log.rs"